--- a/Workbooks/scRNAseq_processing.Rmd
+++ b/Workbooks/scRNAseq_processing.Rmd
@@ -1,17 +1,22 @@
 ---
-title: "R Notebook"
-output: html_notebook
+title: "scRNAseq data processing"
+output: github_document
 ---
 
 Samples were run in triplicate using Hashtag sequencing. 
 The 4 cell type samples were run in separate 10X lanes.  
-Cell Ranger was run for HTO demultiplexing.
-Seurat objects were created in a computer cluster. 
+Cell Ranger was run for HTO demultiplexing (Feature sequencing)
+Seurat objects were created in a computer cluster (DRAC HPC server beluga). 
 
-Process each sorted sample
+# In this notebook 
+1. Processing each of the 4 FACS single cell sequencing datasets
+2. Merging and annotating main cell types
+3. Exploring DA neuron markers and subtype markers. 
+
+Read in the samples
 
 ```{r}
-pathway <- "/Users/rhalenathomas/Documents/Data/scRNAseq/PhenoID/scRNAseqSorted/objs/"
+pathway <- "/scRNAseqSorted/objs/"
 
 Neurons1 <- readRDS(paste(pathway,"seu1.rds",sep = ""))
 Neurons2 <- readRDS(paste(pathway,"seu2.rds",sep = ""))
@@ -73,8 +78,6 @@ Remove doublets from each Sorted population
 suppressMessages(require(DoubletFinder))
 
 ```
-
-
 
 
 ```{r}
@@ -153,7 +156,6 @@ dim(glia1.temp)
 ```
 
 
-
 In this case some doublets will already be removed
 
 ```{r}
@@ -229,11 +231,6 @@ DimPlot(seu, reduction = "umap")
 ```
 
 
-
-
-
-
-
 Rename Idents to prepare to merge
 
 
@@ -267,12 +264,6 @@ sorted.merge <- merge(Neurons1, y=c(Neurons2.sub,Astro.sub,RG.sub), add.cell.ids
 
 ```
 
-```{r}
-
-
-```
-
-
 Cluster merge object 
 
 ```{r}
@@ -289,9 +280,6 @@ seu <- RunUMAP(seu, dim = 1:18, n.neighbors = 43)
 DimPlot(seu)
 
 ```
-
-
-
 
 
 Rename all the subtypes of cells
@@ -319,21 +307,6 @@ DimPlot(seu.sc, group.by = "Subtypes", label = FALSE)
 ```
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 Make a heatmap
 
 ```{r}
@@ -351,7 +324,6 @@ ft <- c("COL3A1","FABP5","HPD","RAB3B","TPBG","TTR","SOX2","ASCL1","CP","GRIA2",
 Idents(seu.sc) <- 'Cell_Subtype_Markers'
 
 
-
 seu.sc$Cell_Subtype_Markers <- factor(seu.sc$Cell_Subtype_Markers, levels = sample.order)
 
 #seu.sc <- ScaleData(seu.sc)
@@ -362,19 +334,6 @@ DotPlot(seu.sc, features = ft, group.by = 'Cell_Subtype_Markers') +
 # these are not very helpful markers 
 # need to reverse sample order for heatmaps
 DoHeatmap(seu.sc, features = ft, group.by = 'Cell_Subtype_Markers')
-
-ft = c()
-
-feature_list = c("PAX6","OTX2","VIM","SLC1A3","SOX2","HES1","NES","S100B","SOX9","MAP2",
-                 "NCAM1","CD24","GRIA2","GABBR1")
-
-feature_list = c("TH","PAX6","OTX2","MAP2","NCAM1","CD24","GRIA2","GABBR1",
-                 "VIM","SLC1A3","SOX2","HES1","NES","S100B","SOX9","GFAP"
-                 )
-
-#"GRIA2","GABBR1"
-
-feature_list = c("MAP2","NCAM1","CD24","GRIA2")
 
 feature_list = c("MAP2","NCAM1","CD24","GRIA2","GRIN2B",,"GAD1","GAD2","GABRA1","GABRB2","TH","ALDH1A1","LMX1B","NR4A2","CORIN","CALB1","KCNJ6","CXCR4","ITGA6","SLC1A3","CD44","AQP4","S100B", "PDGFRA","OLIG2","MBP","CLDN11","VCAM1")
 "SOX9"
@@ -404,8 +363,7 @@ feature_list = c("TH","PAX6","OTX2","MAP2","NCAM1","CD24","GRIA2","GABBR1",
 
 feature_list.d = c("PAX6","VIM","SLC1A3","SOX2","HES1","NES","OTX2",
                  "MAP2","NCAM1","CD24","GRIA2","GABBR1","S100B","SOX9"
-                 )
-
+                 ) 
 
 DotPlot(seu.sc, features = feature_list.d, group.by = 'Cell_Subtype_Markers') +
   theme(axis.text.x = element_text(angle = 90))
@@ -419,7 +377,6 @@ sample.order.r <- rev(sample.order)
 
 seu.sc$Cell_Subtype_Markers <- factor(seu.sc$Cell_Subtype_Markers, levels = sample.order.r)
 
-
 # save the dotplots
 pdf(paste(output_path,"DotPlotCellSubtypesOct17.pdf"))
 DotPlot(seu.sc, features = feature_list.d, group.by = 'Cell_Subtype_Markers') +
@@ -432,7 +389,6 @@ DotPlot(seu.sc, features = "TH", group.by = 'Cell_Subtype_Markers') +
 dev.off()
 
 ```
-
 
 
 Make a label level of main cell types from the merge data
@@ -465,22 +421,13 @@ DimPlot(seu.sc, group.by = 'Cell_Type2')
 ```
 
 
-
-
-
-
-
-
 DA subtyping
-
 
 
 ```{r}
 
 DimPlot(seu.da, group.by = 'Subtypes', split.by = 'orig.ident')
 #FeaturePlot(seu.da, features = )
-
-
 
 
 ```
@@ -518,10 +465,7 @@ DoHeatmap(seu.da, features = DAsub, slot = 'scale.data')
 DotPlot(seu.da, features = DAsub) + RotatedAxis()
 DotPlot(seu.da, features = markers2) + RotatedAxis()
 DoHeatmap(seu.da, features = DAsub.top3, slot = 'scale.data')
-DotPlot(seu
-Lets see some expression of the Kamath subgroup markers on the DimPlot
-
-```{r}
+        
 FeaturePlot(seu.da, features = c("SOX6","CALB1","DDT", "RBP4"))
 FeaturePlot(seu.da, features = c("FAM19A4","OTX2","JUND","UBTF"))
 
@@ -551,8 +495,7 @@ DoHeatmap(seu.da, features = markers)
 ```
 
 
-
-Poulin Review
+Markers from Poulin Review (2014)
 
 ```{r}
 # main markers
@@ -564,34 +507,20 @@ subgroups <- c("SOX6", "ALDH1A1", "SLC17A6", "SLC32A1", "OTX2", "VIP")
 subgroups <- c("SOX6", "ALDH1A1", "SLC17A6", "SLC32A1", "VIP")
 DotPlot(seu.da, features = subgroups) + RotatedAxis()
 
-
-```
-
-DAT and TH expression?
-(Dat/Slc6a3)
-
-
-```{r}
-
+# Check DAT and TH expression
 DotPlot(seu.da, features = c("TH","SLC6A3"))
 DoHeatmap(seu.da, features = c("TH","SLC6A3"))
 
-
-```
-
-
-Some more markers from Poulin Review and Paper (2014)
-
-```{r}
-
+# main subtype markers
 ft <- c("ALDH1A1","SOX6","NDNF","CALB1","ADCYAP1","VIP","OTX2")
 DotPlot(seu.da, features = ft)
 DoHeatmap(seu.da, features = ft)
 
+
 ```
 
-
-iPSC DA culture markers and subtype markers
+Early vs mature DA markers and iPSC markers
+https://doi.org/10.1242/dev.200504
 
 ```{r}
 
@@ -603,14 +532,6 @@ ft <- c(da.markers, mat.neur, da.lineage)
 DotPlot(seu.da, features = ft)
 DoHeatmap(seu.da, features = ft)
 
-
-
-```
-
-Early vs mature DA markers
-https://doi.org/10.1242/dev.200504
-
-```{r}
 
 early <- c("SOX2","EN1","SOX6","TH")
 late <- c("SLC18A2","SLC6A3")  # VMAT2 and DAT
@@ -631,8 +552,6 @@ https://www.sciencedirect.com/science/article/pii/S0012160613001942?via%3Dihub
 
 .da, features = DAsub.top3) + RotatedAxis()
 DotPlot(seu.da, features = DAmarkers) + RotatedAxis()
-
-
 
 Otx2 was shown to regulate subtype identity in the VTA by antagonising the expression of Girk2 and DAT, and was also shown to antagonise the neurotoxic effect of the MPTP in these VTA neurons (Di Salvio et al., 2010a).
 
@@ -715,7 +634,7 @@ DotPlot(seu.da, features = ft)+ RotatedAxis()+ ggtitle("Estabilished human SN vs
 DoHeatmap(seu.da, features = ft)+ ggtitle("Estabilished human SN vs VTA")
 
 ```
-Aguila new stable DGE distinguishing human VTA vs SN
+Aguila identify stable DGE distinguishing human VTA vs SN
 
 ```{r}
 sn <- c("SEZ6", "APT2A3","CBLN1","RGS16")
@@ -742,8 +661,6 @@ h.vta <- c("CADM1","FXYD6","PEG3","CACNA2D3","PTCHD1","GNG4","ZCCHC12",
 ft <- c(h.sn,h.vta)
 DotPlot(seu.da, features = ft)+ RotatedAxis()+ ggtitle("stable human SN vs VTA")
 DoHeatmap(seu.da, features = ft)+ ggtitle("stable human SN vs VTA")
-
-
 
 
 ```
